Fix invisible settings button

--- a/src/components/keyboard/Key.module.css
+++ b/src/components/keyboard/Key.module.css
@@ -5,23 +5,23 @@
     animation: grow 0.9s;
 }
 
-button {
+button.key {
     background-color: rgba(100, 36, 114, 0.8);
     color: white;
     border-radius: 5px;
     border-color: #642472
 }
 
-button:hover {
+button.key:hover {
     background-color: #642472;
 }
 
-.success,
-button:hover.success {
+button.key.success,
+button.key:hover.success {
     background-color: rgb(2, 204, 29);
 }
 
-.failed {
+button.key.failed {
     background-color: rgb(255, 99, 99);
 }
 
